# curriculum-rl-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/curriculum_rl_lab/: __init__.py  cli.py  env_bootstrap.py  metrics.py  reporting.py  reporting_crew.py  reporting_minimax.py  training.py
src/curriculum_rl_lab/envs/: __init__.py  grid_world.py
tests/: test_grid_world.py  test_reporting_paths.py  test_training_smoke.py
